--- a/app/src/main/res/layout/activity_list_recipes.xml
+++ b/app/src/main/res/layout/activity_list_recipes.xml
@@ -13,4 +13,37 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <Button
+            android:id="@+id/btn_search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginBottom="10pt"
+            android:layout_marginEnd="10pt"
+            android:layout_marginStart="10pt"
+            android:layout_marginTop="10pt"
+            android:textSize="20pt"
+            android:onClick="startSearchRecipesActivity"
+            android:text="🔍" />
+
+        <Button
+            android:id="@+id/btn_add_recipe"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="10pt"
+            android:layout_marginEnd="10pt"
+            android:layout_marginStart="10pt"
+            android:layout_marginTop="10pt"
+            android:textSize="20pt"
+            android:text="+" />
+    </RelativeLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
