--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -7,31 +7,55 @@
     android:padding="8dip"
     tools:context=".RecipeDetailsActivity">
 
-    <TextView
-        android:id="@+id/recipe_details_name"
-        android:textSize="20pt"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        />
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
-    <ListView
-        android:id="@+id/recipe_details_ingredients"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/recipe_details_name"
-        app:layout_constraintLeft_toLeftOf="parent"
-        />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/recipe_details_text"
-        android:textSize="16sp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/recipe_details_ingredients"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:textColor="@color/black"
-        />
+            <TextView
+                android:id="@+id/recipe_details_name"
+                android:textSize="20pt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                />
+
+            <ImageView
+                android:id="@+id/recipe_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/recipe_details_name"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:adjustViewBounds="true"
+                android:maxHeight="500px"
+                android:scaleType="centerCrop"
+                android:contentDescription="@string/image_description"
+                />
+
+            <ListView
+                android:id="@+id/recipe_details_ingredients"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/recipe_image"
+                app:layout_constraintLeft_toLeftOf="parent"
+                />
+
+            <TextView
+                android:id="@+id/recipe_details_text"
+                android:textSize="16sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/recipe_details_ingredients"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:textColor="@color/black"
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
